--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.29",
+    "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.11",
+    "vue-count-to": "^1.0.13",
+    "vue-image-crop-upload": "^2.5.0",
+    "vue-json-excel": "^0.2.98",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
