--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.8.29",
     "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
+    "mavon-editor": "^2.9.0",
     "v-charts": "^1.19.0",
     "vue": "^2.6.11",
     "vue-count-to": "^1.0.13",
